--- a/index.html
+++ b/index.html
@@ -62,15 +62,13 @@
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span>
-                </div>
-                <span class="author-block">
-                  <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                    <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                    </span>
-                  </div>
+                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Fourth Author</a>
+                  </span>
+                  <span class="author-block">
+                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Fifth Author</a>
+                  </span>
+                </div>
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Institution Name<br>Conferance name and year</span>
