--- a/index.html
+++ b/index.html
@@ -56,23 +56,24 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Davide Buoso</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Luke Robinson</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Giuseppe Averta</a>,</span>
                   <span class="author-block">
-                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Fourth Author</a>
-                  </span>
-                  <span class="author-block">
-                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Fifth Author</a>
+                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Philip Torr</a>,</span>
+                    <span class="author-block">
+                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Tim Franzmeyer</a><sup>†</sup>,</span>
+                    <span class="author-block">
+                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Daniele De Martini</a><sup>†</sup>
                   </span>
                 </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Politecnico di Torino<br>ICRA 2025</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author: davide.buoso@polito.it</small></span>
+                    <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Equal Supervision</small></span>
                   </div>
 
                   <div class="column has-text-centered">
