--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Davide Buoso</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Davide Buoso</a><sup>*12</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Luke Robinson</a>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Luke Robinson</a><sup>2</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Giuseppe Averta</a>,</span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Giuseppe Averta</a><sup>1</sup>,</span>
                   <span class="author-block">
-                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Philip Torr</a>,</span>
+                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Philip Torr</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Tim Franzmeyer</a><sup>†</sup>,</span>
+                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Tim Franzmeyer</a><sup>†2</sup>,</span>
                     <span class="author-block">
-                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Daniele De Martini</a><sup>†</sup>
+                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Daniele De Martini</a><sup>†2</sup>
                   </span>
                 </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Politecnico di Torino<br>ICRA 2025</span>
+                    <span class="author-block"><sup>1</sup>Politecnico di Torino<br><sup>2</sup>University of Oxford <br> ICRA 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author: davide.buoso@polito.it</small></span>
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Equal Supervision</small></span>
                   </div>
