--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Davide Buoso</a><sup>*12</sup>,</span>
+                <a href="https://lambdavi.github.io" target="_blank">Davide Buoso</a><sup>*12</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Luke Robinson</a><sup>2</sup>,</span>
                   <span class="author-block">
@@ -71,7 +71,7 @@
                 </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Politecnico di Torino<br><sup>2</sup>University of Oxford <br> ICRA 2025</span>
+                    <span class="author-block">Politecnico di Torino <sup>1</sup><br>University of Oxford <sup>2</sup><br> ICRA 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author: davide.buoso@polito.it</small></span>
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Equal Supervision</small></span>
                   </div>
@@ -89,7 +89,7 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
+                    <!-- Supplementary PDF link 
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
@@ -99,8 +99,9 @@
                       <span>Supplementary</span>
                     </a>
                   </span>
+                  -->
 
-                  <!-- Github link -->
+                  <!-- Github link
                   <span class="link-block">
                     <a href="https://github.com/YOUR REPO HERE" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -110,7 +111,7 @@
                     <span>Code</span>
                   </a>
                 </span>
-
+                -->
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
