--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://lambdavi.github.io" target="_blank">Davide Buoso</a><sup>*12</sup>,</span>
+                <a href="https://lambdavi.github.io" target="_blank">Davide Buoso</a><sup>* 1,2</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Luke Robinson</a><sup>2</sup>,</span>
                   <span class="author-block">
@@ -64,9 +64,9 @@
                   <span class="author-block">
                     <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Philip Torr</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Tim Franzmeyer</a><sup>†2</sup>,</span>
+                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Tim Franzmeyer</a><sup>† 2</sup>,</span>
                     <span class="author-block">
-                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Daniele De Martini</a><sup>†2</sup>
+                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Daniele De Martini</a><sup>† 2</sup>
                   </span>
                 </div>
 
@@ -137,8 +137,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
+        <source src="static/videos/paper_pres.gif">
       </video>
       <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
