--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
+      <video poster="" id="tree" autoplay controls muted height="100%">
         <!-- Your video here -->
         <source src="static/videos/video3.mp4"
         type="video/mp4">
