description and images

--- a/index.html
+++ b/index.html
@@ -173,15 +173,22 @@
       <p>
         <b>Select2Plan (S2P)</b> is a novel framework for high-level robot navigation that eliminates the need for extensive training or fine-tuning. The system leverages <b>off-the-shelf Vision-Language Models (VLMs)</b> combined with <b>Visual Question-Answering (VQA)</b> to make decisions without the need for specialized data collection.
       </p>
+      <!--
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
         <img src="static/images/what_can_we_learn.png" alt="" style="max-width: 768px; margin: auto;" />
       </figure>
+      -->
       <h4 class="title is-4">Can we adapt to different perspectives?</h4>
       <p>
-        <b>>S2P</b> adapts effortlessy to different navigation scenarios, including <b>First-Person View (FPV)</b> and <b>Third-Person View (TPV)</b>. This versatility enables it to operate in various conditions, from autonomous vehicle pathfinding to CCTV-based robotic control.
+        <b>>S2P</b> adapts effortlessy to different navigation scenarios, including <b>First-Person View (FPV)</b> and <b>Third-Person View (TPV)</b>. This versatility enables it to operate in various conditions, from autonomous vehicle pathfinding to CCTV-based robotic control.<br>
+        S2P incorporates In-Context Learning (ICL) combined with experiential memory to generate robust plans. The memory retrieval system enables the robot to learn from previous experiences and generalize to new, unseen environments, improving navigation performance by as much as 50% without the need for additional training.
+
       </p>
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
-        <img src="static/images/related.png" alt="" style="max-width: 768px; margin: auto;" />
+        <img src="static/images/1st_frame_all.png" alt="" style="max-width: 768px; margin: auto;" />
+      </figure>
+      <figure class="image" style="margin-top: 32px; margin-bottom: 32px;"></figure>
+        <img src="static/images/3d_frame_all_i.png" alt="" style="max-width: 768px; margin: auto;" />
       </figure>
       <p>
         All these approaches have some limitations. 
