description and images

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <section class="section hero" style="padding-bottom: .75rem; padding-top: 1.5rem;">
   <div class="container is-max-desktop">
     <div class="hero-body" style="padding-bottom: .75rem; padding-top: 1.5rem;">
-      <h3 class="title is-3">Can we plan and navigate without training and fine-tuning?</h3>
+      <h3 class="title is-3">Can we plan and navigate in a training-free matter leveraging VQA and ICL?</h3>
       <p>
         <b>Select2Plan (S2P)</b> is a novel framework for high-level robot navigation that eliminates the need for extensive training or fine-tuning. The system leverages <b>off-the-shelf Vision-Language Models (VLMs)</b> combined with <b>Visual Question-Answering (VQA)</b> to make decisions without the need for specialized data collection.
       </p>
