--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Politecnico di Torino <sup>1</sup>, University of Oxford <sup>2</sup><br> ICRA 2025</span>
+                    <span class="author-block">Politecnico di Torino <sup>1</sup>, University of Oxford <sup>2</sup><br> ICRA 2025 (Under Review)</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author: davide.buoso@polito.it</small></span>
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Equal Supervision</small></span>
                   </div>
@@ -230,7 +230,7 @@
         <img src="static/images/table2.png" alt="" style="max-width: 420px; margin: auto; margin-bottom: 16px;" />
       </figure>
 
-
+      <!--
       <h4 class="title is-4">Step 2: Novel Task Learning</h2>
         <div class="columns is-vcentered is-flex-center is-multiline">
           <div class="column is-half">
@@ -277,6 +277,7 @@
               </figure>
             </div>
         </div>
+-->
 
     </div>
   </div>
