description and images

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     </div>
   </div>
 </section>
-
+<!--
 <section class="section hero" style="padding-bottom: .75rem; padding-top: 1.5rem;">
   <div class="container is-max-desktop">
     <div class="hero-body" style="padding-bottom: .75rem; padding-top: 1.5rem;">
@@ -324,12 +324,12 @@
 </section>
 
 
-<!--BibTex citation -->
+BibTex citation
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">Cite us</h2>
       <pre><code>
-@InProceedings{peirone2024backpack,
+@misc{buoso2024s2p,
   author    = {Peirone, Simone Alberto and Pistilli, Francesca and Alliegro, Antonio and Averta, Giuseppe},
   title     = {A Backpack Full of Skills: Egocentric Video Understanding with Diverse Task Perspectives},
   booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
@@ -340,6 +340,7 @@
       </code></pre>
     </div>
 </section>
+-->
 <!--End BibTex citation -->
 
 
