--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
+  <meta name="description" content="Select2Plan: Training-Free ICL-Based Planning through VQA and Memory Retrieval">
   <meta property="og:title" content="Select2Plan: Training-Free ICL-Based Planning through VQA and Memory Retrieval"/>
   <meta property="og:description" content="https://lambdavi.github.io/select2plan/"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
+  <meta property="og:url" content="https://lambdavi.github.io/select2plan/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/image/1st_frame_all.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
@@ -17,10 +17,10 @@
   <meta name="twitter:title" content="Select2Plan: Training-Free ICL-Based Planning through VQA and Memory Retrieval">
   <meta name="twitter:description" content="https://lambdavi.github.io/select2plan/">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
+  <meta name="twitter:image" content="static/images/1st_frame_all.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="select2plan vlm navigation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
