--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </div>
 </section>
 <!-- End teaser video -->
-
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1926229700&color=%23654812&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/davide-buoso-429794670" title="Davide Buoso" target="_blank" style="color: #cccccc; text-decoration: none;">Davide Buoso</a> · <a href="https://soundcloud.com/davide-buoso-429794670/select2plan" title="Select2Plan: NotebookLM Podcast" target="_blank" style="color: #cccccc; text-decoration: none;">Select2Plan: NotebookLM Podcast</a></div>
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
