--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         <!-- Arxiv PDF link -->
+                      <span class="author-block">PDF will be soon available.</span>
+
+                         <!-- Arxiv PDF link 
                       <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
@@ -88,7 +90,7 @@
                         <span>Paper</span>
                       </a>
                     </span>
-
+                    -->
                     <!-- Supplementary PDF link 
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
@@ -112,7 +114,7 @@
                   </a>
                 </span>
                 -->
-                <!-- ArXiv abstract Link -->
+                <!-- ArXiv abstract Link 
                 <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
@@ -122,6 +124,7 @@
                   <span>arXiv</span>
                 </a>
               </span>
+              -->
             </div>
           </div>
         </div>
