--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                      <span class="author-block">PDF will be soon available.</span>
-
-                         <!-- Arxiv PDF link 
+                         Arxiv PDF link 
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/pdf/2411.04006" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -90,7 +88,7 @@
                         <span>Paper</span>
                       </a>
                     </span>
-                    -->
+                    
                     <!-- Supplementary PDF link 
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
