--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         Arxiv PDF link 
+                      <!-- Arxiv PDF link -->
                       <span class="link-block">
                         <a href="https://arxiv.org/pdf/2411.04006" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
