--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                   </a>
                 </span>
                 -->
-                <!-- ArXiv abstract Link 
+              
+              <!-- ArXiv abstract Link  -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2411.04006" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -122,7 +123,6 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              -->
             </div>
           </div>
         </div>
