--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
   </div>
 </section>
 
-
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -188,11 +187,9 @@
         <b>S2P</b> adapts effortlessy to different navigation scenarios, including <b>First-Person View (FPV)</b> and <b>Third-Person View (TPV)</b>. This versatility enables it to operate in various conditions, from autonomous vehicle pathfinding to CCTV-based robotic control.<br>
       </p>
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
-        <img src="static/images/1st_frame_all.png" alt="" style="margin: auto;" />
+        <img src="static/images/all_arch.png" alt="" style="margin: auto;" />
       </figure>
-      <figure class="image" style="margin-top: 32px; margin-bottom: 32px;"></figure>
-        <img src="static/images/3d_frame_all_i.png" alt="" style=" margin: auto;" />
-      </figure>
+      
       <p>
         S2P incorporates <b>In-Context Learning (ICL)</b> combined with <b>experiential memory</b> to generate robust plans.<br>
         The memory retrieval system enables the robot to learn from previous experiences and generalize to new, unseen environments, improving navigation performance by as much as 50% without the need for additional training.
