--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       54.6% improvement, indicating that our model can effectively leverage contextual information to enhance navigational accuracy and safety.
       In addition to the overall TS improvement, the framework showed a remarkable 38%
       reduction in selecting dangerous points (DS), which indicates locations with a high risk of collision. This reduction is crucial for real-world applications, where safety and reliable navigation are paramount. Such performance gains were consistent across different
-      context scenarios, further highlighting the versatility and adaptability of the proposed approach. WHat is really interesting is the ability to generalize cross embodiement using as instance demos of other robots or humans walking.
+      context scenarios, further highlighting the versatility and adaptability of the proposed approach. What is really interesting is the ability to generalize cross embodiement using as instance demos of other robots or humans walking.
       </p>
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
         <img src="static/images/table2.png" alt="" style="max-width: 420px; margin: auto; margin-bottom: 16px;" />
