--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
         <img src="static/images/table1.png" alt="" style="max-width: 768px; margin: auto; margin-bottom: 16px;" />
       </figure>
+      
+      <h3 class="title is-3">Results in TPV scenario</h3>
       <h4 class="title is-4">What matters in the context?</h4>
       <p>
         We also investigate how different data sources can affect the performance of S2P. In TPV scenario, we evaluate the performance of context coming from three different sources: same deployment scenario and same rooms, same scenario, different rooms
@@ -227,7 +229,8 @@
       <figure class="image" style="margin-top: 32px; margin-bottom: 32px;">
         <img src="static/images/context_v3.png" alt="" style="max-width: 768px; margin: auto;" />
       </figure>
-      <h3 class="title is-3">Results in TPV scenario</h3>
+      <h4 class="title is-4">Actual results</h4>
+
       <p>
       Our In-Context Learning (ICL) approach demonstrated
       significant improvements in the TPV scenario. The highest Trajectory Score (TS) achieved
