--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       significant improvements in the TPV scenario. The highest Trajectory Score (TS) achieved
       was 270.70 in context scenario A, which allows unrestricted retrieval from the database,
       compared to the baseline zero-shot approach, which scored 147.82. This represents a
-      54.6% improvement, indicating that our model can effectively leverage contextual information to enhance navigational accuracy and safety.
+      over 40% improvement, indicating that our model can effectively leverage contextual information to enhance navigational accuracy and safety.
       In addition to the overall TS improvement, the framework showed a remarkable 38%
       reduction in selecting dangerous points (DS), which indicates locations with a high risk of collision. This reduction is crucial for real-world applications, where safety and reliable navigation are paramount. Such performance gains were consistent across different
       context scenarios, further highlighting the versatility and adaptability of the proposed approach. What is really interesting is the ability to generalize cross embodiement using as instance demos of other robots or humans walking.
